Compressed CSS. Added details. Fixed overflow scrolling.

--- a/sass/partials/_page.scss
+++ b/sass/partials/_page.scss
@@ -2,6 +2,11 @@
 	max-width: 100%;
 	width: 100%;
 	
+	.row {
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
 	&.item {
 		padding: 15px 0 0;
 	}
@@ -70,6 +75,7 @@
 		color: white;
 		font-size: 17px;
 		text-align: right;
+		width: 90px;
 		
 		&:focus {
 			color: #444;
@@ -81,4 +87,13 @@
 	margin: 7px auto 0;
 	display: block;
 	width: 0.25em;
+}
+
+h1 em {
+	font-style: normal;
+	font-weight: lighter;
+}
+
+table {
+	width: 100%;
 }
